--- a/reference.bib
+++ b/reference.bib
@@ -91,7 +91,6 @@
   year      = {2018}
 }
 
-
 @inproceedings{Alayrac2020,
   title     = {Self-Supervised MultiModal Versatile Networks},
   author    = {Alayrac, Jean-Baptiste and Recasens, Adria and Schneider, Rosalia and Arandjelovic, Relja and Ramapuram, Jason and De Fauw, Jeffrey and Smaira, Lucas and Dieleman, Sander and Zisserman, Andrew},
@@ -554,7 +553,7 @@
 
 
 @inproceedings{Chang2017,
-  author    = {Chang, Angel and Dai, Angela and Funkhouser, Thomas and Halber, Maciej and Niessner, Matthias and Savva, Manolis and Song, Shuran and Zeng, Andy and Zhang, Yinda},
+  author    = {Chang, Angel and Dai, Angela and Funkhouser, Thomas and Halber, Maciej and Nie{\ss}ner, Matthias and Savva, Manolis and Song, Shuran and Zeng, Andy and Zhang, Yinda},
   title     = {{Matterport3D}: Learning from {RGB-D} Data in Indoor Environments},
   booktitle = threeDV,
   year      = {2017}
@@ -841,7 +840,7 @@
 }
 
 @inproceedings{Dai2017,
-  author    = {Dai, Angela and Qi, Charles R. and Niessner, Matthias},
+  author    = {Dai, Angela and Qi, Charles R. and Nie{\ss}ner, Matthias},
   title     = {Shape completion using {3D}-encoder-predictor CNNs and shape synthesis},
   booktitle = CVPR,
   year      = {2017}
@@ -1138,6 +1137,9 @@
 }
 
 
+
+
+
 @article{Gingold1977,
   title   = {Smoothed particle hydrodynamics: theory and application to non-spherical stars},
   author  = {Gingold, Robert A. and Monaghan, Joseph J.},
@@ -1148,12 +1150,14 @@
 }
 
 
+
 @inproceedings{Girdhar2016,
   title     = {Learning a predictable and generative vector representation for objects},
   author    = {Girdhar, Rohit and Fouhey, David F and Rodriguez, Mikel and Gupta, Abhinav},
   booktitle = ECCV,
   year      = {2016}
 }
+
 
 @inproceedings{Glorot2011,
   title     = {Deep sparse rectifier neural networks},
@@ -1181,6 +1185,7 @@
   year    = {2009}
 }
 
+
 @book{Goodfellow2016,
   title     = {Deep Learning},
   year      = {2016},
@@ -1194,7 +1199,6 @@
   booktitle = NeurIPS,
   year      = {2016}
 }
-
 
 @inproceedings{Graham2015,
   author    = {Ben Graham},
@@ -1210,6 +1214,7 @@
   booktitle = CVPR,
   year      = 2018
 }
+
 
 @inproceedings{Grill2020,
   author    = {Jean-Bastien Grill and Florian Strub and Florent Altché and Corentin Tallec and Pierre H. Richemond and Elena Buchatskaya and Carl Doersch and BernardoAvila Pires and Zhaohan Daniel Guo and Mohammad Gheshlaghi Azar and Bilal Piot and Koray Kavukcuoglu and Rémi Munos and Michal Valko},
@@ -1421,7 +1426,6 @@
   number  = {12}
 }
 
-
 @inproceedings{Hazarika2020,
   title     = {Misa: Modality-invariant and-specific representations for multimodal sentiment analysis},
   author    = {Hazarika, Devamanyu and Zimmermann, Roger and Poria, Soujanya},
@@ -1446,6 +1450,7 @@
   booktitle = CVPR,
   year      = {2016}
 }
+
 
 @inproceedings{He2016a,
   author    = {He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
@@ -1573,7 +1578,6 @@
   year    = {2018}
 }
 
-
 @article{Ioannidou2017,
   author    = {Ioannidou, Anastasia and Chatzilari, Elisavet and Nikolopoulos, Spiros and Kompatsiaris, Ioannis},
   title     = {Deep learning advances in computer vision with {3D} data: A survey},
@@ -1591,6 +1595,7 @@
   booktitle = {Proceedings of the 24th Annual ACM Symposium on User Interface Software and Technology},
   year      = {2011}
 }
+
 
 @inproceedings{Jacot2018,
   title     = {Neural tangent kernel: Convergence and generalization in neural networks},
@@ -1645,7 +1650,6 @@
   number  = {2}
 }
 
-
 @inproceedings{Johns2016,
   author    = {Edward Johns and Stefan Leutenegger and Andrew J. Davison},
   title     = {Pairwise decomposition of image sequences for active multi-view recognition},
@@ -1662,6 +1666,7 @@
   volume  = {21},
   number  = {5}
 }
+
 
 @article{Jones2003,
   author    = {Jones, Thouis R. and Durand, Fr{\'e}do and Desbrun, Mathieu},
@@ -1847,6 +1852,7 @@
   volume  = {33},
   year    = {2020}
 }
+
 
 @inproceedings{Khoury2017,
   author    = {Khoury, Marc and Zhou, Qian-Yi and Koltun, Vladlen},
@@ -2256,6 +2262,7 @@
   year    = {2021}
 }
 
+
 @inproceedings{Liu2021e,
   author    = {Liu, Ze and Zhang, Zheng and Cao, Yue and Hu, Han and Tong, Xin},
   title     = {Group-Free 3D Object Detection via Transformers},
@@ -2329,6 +2336,7 @@
   year      = {2017}
 }
 
+
 @article{Lun2017a,
   author  = {Lun, Zhaoliang and Gadelha, Matheus and Kalogerakis, Evangelos and Maji, Subhransu and Wang, Rui},
   title   = {{3D} shape reconstruction from sketches via multi-view convolutional networks},
@@ -2358,6 +2366,7 @@
   year    = {2008}
 }
 
+
 @inproceedings{Maes2010,
   author    = {Maes, C. and Fabry, T. and Keustermans, J. and Smeets, D. and Suetens, P. and Vandermeulen, D.},
   title     = {Feature detection on {3D} face surfaces for pose normalisation and recognition},
@@ -2372,7 +2381,6 @@
   year         = {2016},
   howpublished = {arXiv:1511.05644 [cs.LG]}
 }
-
 
 @article{Mallick2014,
   author  = {Mallick, T. and Das, P.P. and Majumdar, A.K.},
@@ -2408,6 +2416,7 @@
   year      = {2015}
 }
 
+
 @inproceedings{Maturana2015,
   author    = {Maturana, Daniel and Scherer, Sebastian},
   title     = {{VoxNet}: A {3D} convolutional neural network for real-time object recognition},
@@ -2432,6 +2441,7 @@
   volume  = {28},
   number  = {5}
 }
+
 
 @article{Memoli2001,
   title   = {Fast computation of weighted distance functions and geodesics on implicit hyper-surfaces},
@@ -2482,7 +2492,7 @@
 }
 
 @inproceedings{Mitra2014,
-  author    = {Mitra, Niloy and Wand, Michael and Zhang, Hao (Richard) and Cohen-Or, Daniel and Kim, Vladimir and Huang, Qi-Xing},
+  author    = {Mitra, Niloy J. and Wand, Michael and Zhang, Hao (Richard) and Cohen-Or, Daniel and Kim, Vladimir and Huang, Qi-Xing},
   title     = {Structure-aware shape processing},
   booktitle = {SIGGRAPH 2014 Courses},
   year      = {2014}
@@ -2847,6 +2857,7 @@
   year    = 2020
 }
 
+
 @article{Ramesh2022,
   title   = {Hierarchical text-conditional image generation with {CLIP} latents},
   author  = {Ramesh, Aditya and Dhariwal, Prafulla and Nichol, Alex and Chu, Casey and Chen, Mark},
@@ -2862,7 +2873,6 @@
   number  = {1},
   year    = {2010}
 }
-
 
 @article{Ray2009,
   author  = {Ray, Nicolas and Vallet, Bruno and Alonso, Laurent and L\'{e}vy, Bruno},
@@ -2880,6 +2890,7 @@
   year      = {2019},
   publisher = {Elsevier}
 }
+
 
 @inproceedings{Ren2015,
   author    = {Shaoqing Ren and Kaiming He and Ross Girshick and Jian Sun},
@@ -3045,6 +3056,7 @@
   year      = {2016}
 }
 
+
 @article{Sethian1999,
   title   = {Fast marching methods},
   author  = {Sethian, James A.},
@@ -3070,6 +3082,7 @@
   journal = TVCG,
   year    = {2018}
 }
+
 
 @article{Shapira2008,
   author  = {Shapira, Lior and Shamir, Ariel and Cohen-Or, Daniel},
@@ -3137,6 +3150,7 @@
   year    = {2020}
 }
 
+
 @article{Shen2004,
   author  = {Yuzhong Shen and Barner, K.E.},
   title   = {Fuzzy vector median-based surface smoothing},
@@ -3164,6 +3178,7 @@
   volume  = {25},
   number  = {3}
 }
+
 
 @article{Shi2015,
   author  = {B. Shi and S. Bai and Z. Zhou and X. Bai},
@@ -3224,7 +3239,6 @@
   year      = {2016}
 }
 
-
 @inproceedings{Sinha2017,
   author    = {Ayan Sinha and Asim Unmesh and Qixing Huang and Karthik Ramani},
   title     = {{SurfNet}: Generating {3D} shape surfaces using deep residual networks},
@@ -3254,6 +3268,7 @@
   booktitle = NeurIPS,
   year      = {2020}
 }
+
 
 @misc{Smith2017,
   author       = {Edward Smith and David Meger},
@@ -3298,7 +3313,6 @@
   year      = {2004}
 }
 
-
 @article{Srivastava2014,
   author  = {Srivastava, Nitish and Hinton, Geoffrey E and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan},
   title   = {{Dropout}: A simple way to prevent neural networks from overfitting},
@@ -3330,6 +3344,7 @@
   booktitle = CVPR,
   year      = {2018}
 }
+
 
 @inproceedings{Su2019,
   title     = {{VL-BERT}: Pre-training of generic visual-linguistic representations},
@@ -3398,7 +3413,6 @@
   year      = {2022}
 }
 
-
 @article{Sung2015,
   author  = {Sung, Minhyuk and Kim, Vladimir G and Angst, Roland and Guibas, Leonidas J.},
   title   = {Data-driven structural priors for shape completion},
@@ -3417,6 +3431,7 @@
   number  = {3},
   year    = {2005}
 }
+
 
 @article{Tagliasacchi2011,
   author  = {Tagliasacchi, Andrea and Olson, Matt and Zhang, Hao and Hamarneh, Ghassan and Cohen-Or, Daniel},
@@ -3478,7 +3493,6 @@
   year      = {2021}
 }
 
-
 @article{Tarini2004,
   author  = {Tarini, Marco and Hormann, Kai and Cignoni, Paolo and Montani, Claudio},
   title   = {{PolyCube-Maps}},
@@ -3495,6 +3509,7 @@
   booktitle = {Proc. of the conference on Visualization},
   year      = {2002}
 }
+
 
 @inproceedings{Tatarchenko2016,
   author    = {Tatarchenko, Maxim and Dosovitskiy, Alexey and Brox, Thomas},
@@ -3538,7 +3553,6 @@
   year      = {2017}
 }
 
-
 @inproceedings{Tomasi1998,
   author    = {C. Tomasi and R. Manduchi},
   title     = {Bilateral filtering for gray and color images},
@@ -3561,7 +3575,6 @@
   year      = {2017}
 }
 
-
 @inproceedings{Uhrig2017,
   author    = {Jonas Uhrig and Nick Schneider and Lukas Schneider and Thomas Brox and Andreas Geiger},
   title     = {Sparsity invariant {CNNs}},
@@ -3576,6 +3589,7 @@
   booktitle = CVPR,
   year      = {2018}
 }
+
 
 @inproceedings{Ummenhofer2021,
   title     = {Adaptive Surface Reconstruction With Multiscale Convolutional Kernels},
@@ -3608,6 +3622,7 @@
   year      = {2018}
 }
 
+
 @inproceedings{Vincent2008,
   title     = {Extracting and composing robust features with denoising autoencoders},
   author    = {Vincent, Pascal and Larochelle, Hugo and Bengio, Yoshua and Manzagol, Pierre-Antoine},
@@ -3631,7 +3646,6 @@
   number  = {7}
 }
 
-
 @article{Wang2014,
   author  = {Wang, Ruimin and Yang, Zhouwang and Liu, Ligang and Deng, Jiansong and Chen, Falai},
   title   = {Decoupling noise and features via weighted $l_1$-analysis compressed sensing},
@@ -3650,6 +3664,7 @@
   volume  = {34},
   number  = {6}
 }
+
 
 @article{Wang2016,
   author  = {Yueqing Wang and Zhige Xie and Kai Xu and Yong Dou and Yuanwu Lei},
@@ -3884,7 +3899,6 @@
   number  = {3}
 }
 
-
 @inproceedings{Wu2015,
   author    = {Wu, Zhirong and Song, Shuran and Khosla, Aditya and Yu, Fisher and Zhang, Linguang and Tang, Xiaoou and Xiao, Jianxiong},
   title     = {{3D ShapeNets}: A deep representation for volumetric shape modeling},
@@ -3899,6 +3913,7 @@
   booktitle = NeurIPS,
   year      = {2016}
 }
+
 
 @inproceedings{Wu2017,
   author    = {Wu, Jiajun and Wang, Yifan and Xue, Tianfan and Sun, Xingyuan and Freeman, Bill and Tenenbaum, Josh},
@@ -3977,6 +3992,7 @@
   year    = {2021}
 }
 
+
 @inproceedings{Xiao2021,
   title     = {Early convolutions help transformers see better},
   author    = {Xiao, Tete and Singh, Mannat and Mintun, Eric and Darrell, Trevor and Doll{\'a}r, Piotr and Girshick, Ross},
@@ -4014,7 +4030,6 @@
   year      = {2021}
 }
 
-
 @inproceedings{Xie2021a,
   title     = {{VENet}: Voting Enhancement Network for {3D} Object Detection},
   author    = {Xie, Qian and Lai, Yu-Kun and Wu, Jing and Wang, Zhoutao and Lu, Dening and Wei, Mingqiang and Wang, Jun},
@@ -4031,6 +4046,7 @@
   number  = {4},
   year    = {2009}
 }
+
 
 @incollection{Xu2009,
   title     = {Partial intrinsic reflectional symmetry of {3D} shapes},
@@ -4109,7 +4125,6 @@
   issn      = {1530-1052}
 }
 
-
 @inproceedings{Yan2006,
   author    = {Yan, Dong-Ming and Liu, Yang and Wang, Wenping},
   booktitle = {Geom. Model. and Proc.},
@@ -4125,6 +4140,7 @@
   year      = {2016}
 }
 
+
 @article{Yan2020,
   title   = {{COVID-19} Chest {CT} Image Segmentation--A Deep Convolutional Neural Network Solution},
   author  = {Yan, Qingsen and Wang, Bo and Gong, Dong and Luo, Chuan and Zhao, Wei and Shen, Jianhu and Shi, Qinfeng and Jin, Shuo and Zhang, Liang and You, Zheng},
@@ -4138,6 +4154,14 @@
   booktitle = CVPR,
   year      = {2020}
 }
+
+@inproceedings{Yan2022,
+  title     = {Shapeformer: Transformer-based shape completion via sparse representation},
+  author    = {Yan, Xingguang and Lin, Liqiang and Mitra, Niloy J. and Lischinski, Dani and Cohen-Or, Daniel and Huang, Hui},
+  booktitle = CVPR,
+  year      = {2022}
+}
+
 
 @article{Yang2015,
   title   = {{Go-ICP}: A globally optimal solution to {3D ICP} point-set registration},
@@ -4452,6 +4476,13 @@
   title     = {{NeRFusion}: Fusing Radiance Fields for Large-Scale Scene Reconstruction},
   booktitle = CVPR,
   year      = {2022}
+}
+
+@inproceedings{Zhang2022a,
+  title   = {{3DILG}: Irregular latent grids for {3D} generative modeling},
+  author  = {Zhang, Biao and Nie{\ss}ner, Matthias and Wonka, Peter},
+  booktitle = NeurIPS,
+  year    = {2022}
 }
 
 @inproceedings{Zhao2019,
