--- a/reference.bib
+++ b/reference.bib
@@ -47,6 +47,7 @@
 }
 
 
+
 @article{Adams2010,
   author  = {Adams, Andrew and Baek, Jongmin and Davis, Myers Abraham},
   title   = {Fast high-dimensional filtering using the permutohedral lattice},
@@ -83,13 +84,13 @@
 }
 
 
-
 @inproceedings{Alayrac2020,
   title     = {Self-Supervised MultiModal Versatile Networks},
   author    = {Alayrac, Jean-Baptiste and Recasens, Adria and Schneider, Rosalia and Arandjelovic, Relja and Ramapuram, Jason and De Fauw, Jeffrey and Smaira, Lucas and Dieleman, Sander and Zisserman, Andrew},
   booktitle = NeurIPS,
   year      = {2020}
 }
+
 
 @article{Alhashim2012,
   author  = {Alhashim, Ibraheem and Zhang, Hao and Liu, Ligang},
@@ -99,6 +100,8 @@
   volume  = {28},
   number  = {12}
 }
+
+
 
 @inproceedings{Andersen2009,
   author    = {Andersen, Vedrana and Desbrun, Mathieu and B{\ae}rentzen, J. Andreas and Aan{\ae}s, Henrik},
@@ -114,14 +117,12 @@
   year      = {1999}
 }
 
-
 @inproceedings{Aoki2019,
   author    = {Aoki, Yasuhiro and Goforth, Hunter and Arun Srivatsan, Rangaprasad and Lucey, Simon},
   booktitle = CVPR,
   title     = {{PointNetLK}: Robust \& Efficient Point Cloud Registration Using PointNet},
   year      = {2019}
 }
-
 
 @inproceedings{Armeni2016,
   title     = {{3D} Semantic Parsing of Large-Scale Indoor Spaces},
@@ -146,6 +147,7 @@
   year      = {2017}
 }
 
+
 @inproceedings{Arthur2007,
   author    = {Arthur, David and Vassilvitskii, Sergei},
   title     = {K-means++: the advantages of careful seeding},
@@ -162,7 +164,6 @@
   volume  = {45},
   number  = {2}
 }
-
 
 @article{Atzmon2018,
   author  = {Atzmon, Matan and Maron, Haggai and Lipman, Yaron},
@@ -235,6 +236,7 @@
   number  = {12}
 }
 
+
 @book{Baerentzen2002,
   title     = {Manipulation of volumetric solids with applications to sculpting},
   author    = {B{\ae}rentzen, J Andreas},
@@ -248,7 +250,6 @@
   booktitle = CVPR,
   year      = {2016}
 }
-
 
 @inproceedings{Bai2021,
   title     = {Unsupervised multi-source domain adaptation for person re-identification},
@@ -536,6 +537,7 @@
   year      = {2018}
 }
 
+
 @inproceedings{Chabra2020,
   title     = {Deep Local Shapes: Learning Local {SDF} Priors for Detailed {3D} Reconstruction},
   author    = {Chabra, Rohan and Lenssen, Jan Eric and Ilg, Eddy and Schmidt, Tanner and Straub, Julian and Lovegrove, Steven and Newcombe, Richard},
@@ -551,7 +553,6 @@
   year    = {2015}
 }
 
-
 @inproceedings{Chang2017,
   author    = {Chang, Angel and Dai, Angela and Funkhouser, Thomas and Halber, Maciej and Nie{\ss}ner, Matthias and Savva, Manolis and Song, Shuran and Zeng, Andy and Zhang, Yinda},
   title     = {{Matterport3D}: Learning from {RGB-D} Data in Indoor Environments},
@@ -566,6 +567,7 @@
   booktitle = {International Conference on Frontiers in Handwriting Recognition (ICFHR)},
   year      = {2006}
 }
+
 
 @inproceedings{Chen1990,
   title     = {Shortest paths on a polyhedron},
@@ -583,7 +585,6 @@
   number    = {3},
   booktitle = CGF
 }
-
 
 @article{Chen2009,
   author  = {Xiaobai Chen and Aleksey Golovinskiy and Thomas Funkhouser},
@@ -636,6 +637,7 @@
   year      = {2020}
 }
 
+
 @inproceedings{Chen2020a,
   title     = {Big Self-Supervised Models are Strong Semi-Supervised Learners},
   author    = {Chen, Ting and Kornblith, Simon and Swersky, Kevin and Norouzi, Mohammad and Hinton, Geoffrey},
@@ -651,13 +653,13 @@
   year      = {2020}
 }
 
-
 @inproceedings{Chen2021,
   author    = {Xinlei Chen and Kaiming He},
   title     = {Exploring Simple Siamese Representation Learning},
   booktitle = CVPR,
   year      = {2021}
 }
+
 
 @inproceedings{Chen2022,
   title     = {Scaling up Kernels in {3D CNNs}},
@@ -666,13 +668,13 @@
   year      = {2022}
 }
 
+
 @inproceedings{Cheng2021,
   title     = {Back-Tracing Representative Points for Voting-based {3D} Object Detection in Point Clouds},
   author    = {Cheng, Bowen and Sheng, Lu and Shi, Shaoshuai and Yang, Ming and Xu, Dong},
   booktitle = CVPR,
   year      = {2021}
 }
-
 
 @inproceedings{Cheng2022,
   title     = {{PatchFormer}: A versatile {3D} transformer based on patch attention},
@@ -705,13 +707,13 @@
   number  = {4}
 }
 
+
 @inproceedings{Choy2016,
   author    = {Choy, Christopher and Xu, Danfei and Gwak, JunYoung and Chen, Kevin and Savarese, Silvio},
   title     = {{3D-R2N2}: A unified approach for single and multi-view {3D} object reconstruction},
   booktitle = ECCV,
   year      = {2016}
 }
-
 
 @inproceedings{Choy2019,
   author    = {Choy, Christopher and Gwak, JunYoung and Savarese, Silvio},
@@ -720,7 +722,6 @@
   year      = {2019}
 }
 
-
 @article{Chu2021,
   title   = {Conditional positional encodings for vision transformers},
   author  = {Chu, Xiangxiang and Tian, Zhi and Zhang, Bo and Wang, Xinlong and Wei, Xiaolin and Xia, Huaxia and Shen, Chunhua},
@@ -728,12 +729,14 @@
   year    = {2021}
 }
 
+
 @inproceedings{Chu2021a,
   author    = {Chu, Xiangxiang and Tian, Zhi and Wang, Yuqing and Zhang, Bo and Ren, Haibing and Wei, Xiaolin and Xia, Huaxia and Shen, Chunhua},
   booktitle = NeurIPS,
   title     = {Twins: Revisiting the Design of Spatial Attention in Vision Transformers},
   year      = {2021}
 }
+
 
 @article{Chuang2011,
   author  = {Chuang, Ming and Kazhdan, Michael},
@@ -814,7 +817,6 @@
   year    = {2013}
 }
 
-
 @misc{cublas2022,
   title        = {{cuBLAS}},
   author       = {cuBLAS},
@@ -845,6 +847,7 @@
   booktitle = CVPR,
   year      = {2017}
 }
+
 
 @inproceedings{Dai2017a,
   author    = {Dai, Angela and Chang, Angel X. and Savva, Manolis and Halber, Maciej and Funkhouser, Thomas and Nie{\ss}ner, Matthias},
@@ -890,7 +893,6 @@
   year      = {2018}
 }
 
-
 @inproceedings{Desbrun1999,
   author    = {Desbrun, Mathieu and Meyer, Mark and Schr\"{o}der, Peter and Barr, Alan H.},
   title     = {Implicit fairing of irregular meshes using diffusion and curvature flow},
@@ -904,6 +906,7 @@
   title   = {{BERT}: Pre-training of deep bidirectional transformers for language understanding},
   year    = {2018}
 }
+
 
 @article{Diebel2006,
   author  = {Diebel, James R. and Thrun, Sebastian and Br\"{u}nig, Michael},
@@ -921,7 +924,6 @@
   year      = {2015}
 }
 
-
 @inproceedings{Dollar2010,
   author    = {Doll{\'a}r, Piotr and Welinder, Peter and Perona, Pietro},
   title     = {Cascaded pose regression},
@@ -936,6 +938,7 @@
   booktitle = CVPR,
   year      = {2022}
 }
+
 
 @inproceedings{Dosovitskiy2014,
   title     = {Discriminative unsupervised feature learning with convolutional neural networks},
@@ -1100,7 +1103,6 @@
   volume  = {78}
 }
 
-
 @inproceedings{Ganapathi2018,
   author    = {Vignesh Ganapathi-Subramanian and Olga Diamanti and Soeren Pirk and Chengcheng Tang and Matthias Nießner and Leonidas J. Guibas},
   booktitle = threeDV,
@@ -1114,6 +1116,7 @@
   title     = {{PointNet}: A {3D} convolutional neural network for real-time object class recognition},
   year      = {2016}
 }
+
 
 @inproceedings{Gehring2017,
   author    = {Jonas Gehring and Michael Auli and David Grangier and Denis Yarats and Yann N. Dauphin},
@@ -1136,10 +1139,6 @@
   year      = {2017}
 }
 
-
-
-
-
 @article{Gingold1977,
   title   = {Smoothed particle hydrodynamics: theory and application to non-spherical stars},
   author  = {Gingold, Robert A. and Monaghan, Joseph J.},
@@ -1149,8 +1148,6 @@
   year    = {1977}
 }
 
-
-
 @inproceedings{Girdhar2016,
   title     = {Learning a predictable and generative vector representation for objects},
   author    = {Girdhar, Rohit and Fouhey, David F and Rodriguez, Mikel and Gupta, Abhinav},
@@ -1159,12 +1156,17 @@
 }
 
 
+
+
+
 @inproceedings{Glorot2011,
   title     = {Deep sparse rectifier neural networks},
   author    = {Glorot, Xavier and Bordes, Antoine and Bengio, Yoshua},
   booktitle = {International Conference on Artificial Intelligence and Statistics},
   year      = {2011}
 }
+
+
 
 @article{Golovinskiy2008,
   author  = {Golovinskiy, Aleksey and Funkhouser, Thomas},
@@ -1185,13 +1187,13 @@
   year    = {2009}
 }
 
-
 @book{Goodfellow2016,
   title     = {Deep Learning},
   year      = {2016},
   author    = {Ian Goodfellow and Yoshua Bengio and Aaron Courville},
   publisher = {MIT Press}
 }
+
 
 @inproceedings{Goodfellow2016a,
   author    = {Ian Goodfellow and Jean Pouget-Abadie and Mehdi Mirza and Bing Xu and David Warde-Farley and Sherjil Ozair and Aaron Courville and Yoshua Bengio},
@@ -1200,13 +1202,13 @@
   year      = {2016}
 }
 
+
 @inproceedings{Graham2015,
   author    = {Ben Graham},
   title     = {Sparse {3D} convolutional neural networks},
   booktitle = BMVC,
   year      = {2015}
 }
-
 
 @inproceedings{Graham2018,
   author    = {Benjamin Graham and Martin Engelcke and Laurens van der Maaten},
@@ -1215,7 +1217,6 @@
   year      = 2018
 }
 
-
 @inproceedings{Grill2020,
   author    = {Jean-Bastien Grill and Florian Strub and Florent Altché and Corentin Tallec and Pierre H. Richemond and Elena Buchatskaya and Carl Doersch and BernardoAvila Pires and Zhaohan Daniel Guo and Mohammad Gheshlaghi Azar and Bilal Piot and Koray Kavukcuoglu and Rémi Munos and Michal Valko},
   title     = {Bootstrap Your Own Latent: A New Approach to Self-Supervised Learning},
@@ -1223,12 +1224,14 @@
   year      = {2020}
 }
 
+
 @inproceedings{Gropp2020,
   title     = {Implicit geometric regularization for learning shapes},
   author    = {Gropp, Amos and Yariv, Lior and Haim, Niv and Atzmon, Matan and Lipman, Yaron},
   booktitle = ICML,
   year      = {2020}
 }
+
 
 @inproceedings{Groueix2018,
   author    = {Thibault Groueix and Matthew Fisher and Vladimir G. Kim and Bryan C. Russell and Mathieu Aubry},
@@ -1433,7 +1436,6 @@
   year      = {2020}
 }
 
-
 @article{He2013,
   author  = {He, Lei and Schaefer, Scott},
   title   = {Mesh denoising via $L_0$ minimization},
@@ -1442,7 +1444,6 @@
   volume  = {32},
   number  = {4}
 }
-
 
 @inproceedings{He2016,
   title     = {Deep residual learning for image recognition},
@@ -1459,12 +1460,14 @@
   year      = {2016}
 }
 
+
 @inproceedings{He2018,
   author    = {He, Xinwei and Zhou, Yang and Zhou, Zhichao and Bai, Song and Bai, Xiang},
   booktitle = CVPR,
   title     = {Triplet-center loss for multi-view {3D} object retrieval},
   year      = {2018}
 }
+
 
 @inproceedings{He2020,
   author    = {Kaiming He and Haoqi Fan and Yuxin Wu and Saining Xie and Ross Girshick},
@@ -1588,14 +1591,12 @@
   articleno = {20}
 }
 
-
 @inproceedings{Izadi2011,
   author    = {Izadi, Shahram and Kim, David and Hilliges, Otmar and Molyneaux, David and Newcombe, Richard and Kohli, Pushmeet and Shotton, Jamie and Hodges, Steve and Freeman, Dustin and Davison, Andrew and Fitzgibbon, Andrew},
   title     = {{KinectFusion}: real-time {3D} reconstruction and interaction using a moving depth camera},
   booktitle = {Proceedings of the 24th Annual ACM Symposium on User Interface Software and Technology},
   year      = {2011}
 }
-
 
 @inproceedings{Jacot2018,
   title     = {Neural tangent kernel: Convergence and generalization in neural networks},
@@ -1604,12 +1605,14 @@
   year      = {2018}
 }
 
+
 @inproceedings{Jampani2016,
   author    = {Jampani, Varun and Kiefel, Martin and Gehler, Peter V.},
   title     = {Learning sparse high dimensional filters: image filtering, dense {CRFs} and bilateral neural networks},
   booktitle = CVPR,
   year      = {2016}
 }
+
 
 @inproceedings{Jia2014,
   author    = {Jia, Yangqing and Shelhamer, Evan and Donahue, Jeff and Karayev, Sergey and Long, Jonathan and Girshick, Ross and Guadarrama, Sergio and Darrell, Trevor},
@@ -1657,7 +1660,6 @@
   year      = {2016}
 }
 
-
 @article{Johnson1999,
   author  = {Johnson, Andrew E. and Hebert, Martial},
   title   = {Using spin images for efficient object recognition in cluttered {3D} scenes},
@@ -1666,7 +1668,6 @@
   volume  = {21},
   number  = {5}
 }
-
 
 @article{Jones2003,
   author    = {Jones, Thouis R. and Durand, Fr{\'e}do and Desbrun, Mathieu},
@@ -1678,6 +1679,7 @@
   booktitle = SIG
 }
 
+
 @article{Jones2006,
   title   = {{3D} distance fields: A survey of techniques and applications},
   author  = {Jones, Mark W and Baerentzen, J Andreas and Sramek, Milos},
@@ -1686,6 +1688,7 @@
   number  = {4},
   year    = {2006}
 }
+
 
 @article{Ju2002,
   title   = {Dual contouring of hermite data},
@@ -1844,7 +1847,6 @@
   year    = {2020}
 }
 
-
 @article{Khosla2020,
   title   = {Supervised contrastive learning},
   author  = {Khosla, Prannay and Teterwak, Piotr and Wang, Chen and Sarna, Aaron and Tian, Yonglong and Isola, Phillip and Maschinot, Aaron and Liu, Ce and Krishnan, Dilip},
@@ -1853,13 +1855,13 @@
   year    = {2020}
 }
 
-
 @inproceedings{Khoury2017,
   author    = {Khoury, Marc and Zhou, Qian-Yi and Koltun, Vladlen},
   title     = {Learning compact geometric features},
   booktitle = ICCV,
   year      = {2017}
 }
+
 
 @article{Kim2013,
   author  = {Vladimir G. Kim and Li, Wilmot and Mitra, Niloy J. and Chaudhuri, Siddhartha and DiVerdi, Stephen and Funkhouser, Thomas},
@@ -1869,6 +1871,7 @@
   volume  = {32},
   number  = {4}
 }
+
 
 @article{Kimmel1998,
   title   = {Computing geodesic paths on manifolds},
@@ -2025,6 +2028,13 @@
   title     = {Face alignment using cascade Gaussian process regression trees},
   booktitle = CVPR,
   year      = {2015}
+}
+
+@inproceedings{Lei2019,
+  title     = {Octree guided {CNN} with spherical kernels for {3D} point clouds},
+  author    = {Lei, Huan and Akhtar, Naveed and Mian, Ajmal},
+  booktitle = CVPR,
+  year      = {2019}
 }
 
 @inproceedings{Lei2020,
@@ -2254,7 +2264,6 @@
   year      = {2021}
 }
 
-
 @article{Liu2021d,
   title   = {Self-supervised learning: Generative or contrastive},
   author  = {Liu, Xiao and Zhang, Fanjin and Hou, Zhenyu and Mian, Li and Wang, Zhaoyu and Zhang, Jing and Tang, Jie},
@@ -2269,6 +2278,7 @@
   booktitle = ICCV,
   year      = {2021}
 }
+
 
 @inproceedings{Liu2022,
   title     = {{MaxViT}: Multi-Axis Vision Transformer},
@@ -2328,7 +2338,6 @@
   number  = {3}
 }
 
-
 @inproceedings{Lun2017,
   author    = {Zhaoliang Lun and Matheus Gadelha and Evangelos Kalogerakis and Subhransu Maji and Rui Wang},
   title     = {{3D} shape reconstruction from sketches via multi-view convolutional networks},
@@ -2344,6 +2353,7 @@
   year    = {2017}
 }
 
+
 @inproceedings{Lyu2020,
   author    = {Yecheng Lyu and Xinming Huang and Ziming Zhang},
   title     = {Learning to segment {3D} point clouds in {2D} image space},
@@ -2357,7 +2367,6 @@
   booktitle = ICLR,
   year      = {2022}
 }
-
 
 @article{Maaten2008,
   author  = {Maaten, Laurens van der and Hinton, Geoffrey},
@@ -2373,6 +2382,7 @@
   booktitle = {Biometrics: Theory Applications and Systems (BTAS)},
   year      = {2010}
 }
+
 
 @inproceedings{Makhzani2016,
   author       = {Alireza Makhzani and Jonathon Shlens and Navdeep Jaitly and Ian J. Goodfellow},
@@ -2391,13 +2401,13 @@
   number  = {6}
 }
 
-
 @inproceedings{Mao2021,
   title     = {Voxel Transformer for {3D} Object Detection},
   author    = {Mao, Jiageng and Xue, Yujing and Niu, Minzhe and Bai, Haoyue and Feng, Jiashi and Liang, Xiaodan and Xu, Hang and Xu, Chunjing},
   booktitle = ICCV,
   year      = {2021}
 }
+
 
 @article{Martel2021,
   title   = {{ACORN}: {Adaptive} coordinate networks for neural scene representation},
@@ -2407,7 +2417,6 @@
   number  = {4},
   year    = {2021}
 }
-
 
 @inproceedings{Masci2015,
   author    = {Jonathan Masci and Davide Boscaini and Michael M. Bronstein and Pierre Vandergheynst},
@@ -2424,6 +2433,7 @@
   year      = {2015}
 }
 
+
 @article{Meagher1982,
   author  = {Donald Meagher},
   title   = {Geometric modeling using octree encoding},
@@ -2431,7 +2441,6 @@
   year    = {1982},
   volume  = {19}
 }
-
 
 @article{Mehra2009,
   author  = {Ravish Mehra and Qingnan Zhou and Jeremy Long and Alla Sheffer and Amy Gooch and Niloy J. Mitra},
@@ -2451,6 +2460,7 @@
   number  = {2},
   year    = {2001}
 }
+
 
 @article{Memoli2005,
   title   = {Distance Functions and Geodesics on Submanifolds of {$R^d$} and Point Clouds},
@@ -2847,7 +2857,6 @@
   year    = {2019}
 }
 
-
 @article{Rainer2020,
   author  = {Rainer, Gilles and Ghosh, Abhijeet and Jakob, Wenzel and Weyrich, Tim},
   title   = {Unified Neural Encoding of {BTFs}},
@@ -2864,6 +2873,7 @@
   journal = {arXiv preprint arXiv:2204.06125},
   year    = {2022}
 }
+
 
 @article{Raviv2010,
   title   = {Full and partial symmetries of non-rigid shapes},
@@ -2883,7 +2893,6 @@
   number  = {1}
 }
 
-
 @book{Redko2019,
   title     = {Advances in Domain Adaptation Theory},
   author    = {Ievgen Redko and Amaury Habrard and Emilie Morvant and Marc Sebban and Younès Bennani},
@@ -2898,6 +2907,7 @@
   booktitle = NeurIPS,
   year      = {2015}
 }
+
 
 @article{Ren2017,
   author  = {Ren, Mengwei and Niu, Liang and Fang, Yi},
@@ -3048,7 +3058,6 @@
   number  = {4}
 }
 
-
 @inproceedings{Sedaghat2016,
   author    = {Nima Sedaghat and Mohammadreza Zolfaghari and Thomas Brox},
   title     = {Orientation-boosted voxel nets for {3D} object recognition},
@@ -3066,6 +3075,7 @@
   year    = {1999}
 }
 
+
 @article{Shao2012,
   author  = {Shao, Tianjia and Xu, Weiwei and Zhou, Kun and Wang, Jingdong and Li, Dongping and Guo, Baining},
   title   = {An Interactive Approach to Semantic Modeling of Indoor Scenes with an {RGBD} Camera},
@@ -3074,7 +3084,6 @@
   volume  = {31},
   number  = {6}
 }
-
 
 @article{Shao2018,
   title   = {{H-CNN}: spatial hashing based {CNN} for {3D} shape analysis},
@@ -3092,6 +3101,7 @@
   volume  = {24},
   number  = {4}
 }
+
 
 @article{Shapira2010,
   title   = {Contextual part analogies in {3D} objects},
@@ -3140,7 +3150,6 @@
   year    = {2018}
 }
 
-
 @article{Sharp2020,
   title   = {You can find geodesic paths in triangle meshes by just flipping edges},
   author  = {Sharp, Nicholas and Crane, Keenan},
@@ -3160,6 +3169,7 @@
   number  = {3}
 }
 
+
 @article{Shen2012,
   author  = {Shen, Chao-Hui and Fu, Hongbo and Chen, Kang and Hu, Shi-Min},
   title   = {{Structure Recovery by Part Assembly}},
@@ -3168,7 +3178,6 @@
   volume  = {31},
   number  = {6}
 }
-
 
 @article{Shi2006,
   author  = {Shi, Lin and Yu, Yizhou and Bell, Nathan and Feng, Wei-Wen},
@@ -3186,6 +3195,7 @@
   journal = {IEEE Signal Processing Letters},
   year    = {2015}
 }
+
 
 @article{Shi2021,
   title   = {Multi-dataset Pretraining: A Unified Model for Semantic Segmentation},
@@ -3246,7 +3256,6 @@
   year      = {2017}
 }
 
-
 @article{Sirignano2018,
   title   = {{DGM}: A deep learning algorithm for solving partial differential equations},
   author  = {Sirignano, Justin and Spiliopoulos, Konstantinos},
@@ -3254,13 +3263,13 @@
   year    = {2018}
 }
 
+
 @inproceedings{Sitzmann2019,
   title     = {Scene representation networks: Continuous {3D}-structure-aware neural scene representations},
   author    = {Sitzmann, Vincent and Zollh{\"o}fer, Michael and Wetzstein, Gordon},
   booktitle = NeurIPS,
   year      = {2019}
 }
-
 
 @inproceedings{Sitzmann2020,
   title     = {Implicit Neural Representations with Periodic Activation Functions},
@@ -3276,6 +3285,7 @@
   howpublished = {arXiv:1707.09557 [cs.CV]},
   year         = {2017}
 }
+
 
 @unpublished{Solomon2014,
   author = {Solomon, Justin and Crane, Keenan and Butscher, Adrian and Wojtan, Chris},
@@ -3322,7 +3332,6 @@
   number  = {1}
 }
 
-
 @inproceedings{Stutz2018,
   author    = {Stutz, David and Geiger, Andreas},
   booktitle = CVPR,
@@ -3330,13 +3339,13 @@
   year      = {2018}
 }
 
+
 @inproceedings{Su2015,
   author    = {Su, Hang and Maji, Subhransu and Kalogerakis, Evangelos and Learned-Miller, Erik},
   title     = {Multi-view convolutional neural networks for {3D} shape recognition},
   booktitle = ICCV,
   year      = {2015}
 }
-
 
 @inproceedings{Su2018,
   author    = {Hang Su and Varun Jampani and Deqing Sun and Subhransu Maji and Evangelos Kalogerakis and Ming-Hsuan Yang and Jan Kautz},
@@ -3352,6 +3361,7 @@
   booktitle = ICLR,
   year      = {2020}
 }
+
 
 @article{Subr2009,
   author  = {Subr, Kartic and Soler, Cyril and Durand, Fr{\'e}do},
@@ -3422,7 +3432,6 @@
   number  = {6}
 }
 
-
 @article{Surazhsky2005,
   title   = {Fast exact and approximate geodesics on meshes},
   author  = {Surazhsky, Vitaly and Surazhsky, Tatiana and Kirsanov, Danil and Gortler, Steven J and Hoppe, Hugues},
@@ -3441,6 +3450,7 @@
   volume  = {30},
   number  = {5}
 }
+
 
 @inproceedings{Takikawa2021,
   title     = {Neural Geometric Level of Detail: Real-time Rendering with Implicit {3D} Shapes},
@@ -3502,7 +3512,6 @@
   number  = {3}
 }
 
-
 @inproceedings{Tasdizen2002,
   author    = {Tasdizen, Tolga and Whitaker, Ross and Burchard, Paul and Osher, Stanley},
   title     = {Geometric surface smoothing via anisotropic diffusion of normals},
@@ -3517,6 +3526,7 @@
   booktitle = ECCV,
   year      = {2016}
 }
+
 
 @inproceedings{Tatarchenko2017,
   author    = {Tatarchenko, Maxim and Dosovitskiy, Alexey and Brox, Thomas},
@@ -3560,13 +3570,13 @@
   year      = {1998}
 }
 
-
 @inproceedings{Tulsiani2017,
   author    = {Tulsiani, Shubham and Zhou, Tinghui and Efros, Alexei A and Malik, Jitendra},
   title     = {Multi-view supervision for single-view reconstruction via differentiable ray consistency},
   booktitle = CVPR,
   year      = {2017}
 }
+
 
 @inproceedings{Tulsianiand2017,
   author    = {Shubham Tulsianiand and Hao Su and Leonidas J. Guibas and Alexei A. Efros and Jitendra Malik},
@@ -3582,7 +3592,6 @@
   year      = {2017}
 }
 
-
 @inproceedings{Ulyanov2018,
   title     = {Deep image prior},
   author    = {Ulyanov, Dmitry and Vedaldi, Andrea and Lempitsky, Victor},
@@ -3597,6 +3606,7 @@
   booktitle = ICCV,
   year      = {2021}
 }
+
 
 @article{Vallet2008,
   title   = {Spectral geometry processing with manifold harmonics},
@@ -3614,7 +3624,6 @@
   year      = {2017}
 }
 
-
 @inproceedings{Velickovic2018,
   title     = {Graph Attention Networks},
   author    = {Veli{\v{c}}kovi{\'{c}}, Petar and Cucurull, Guillem and Casanova, Arantxa and Romero, Adriana and Li{\`{o}}, Pietro and Bengio, Yoshua},
@@ -3629,6 +3638,7 @@
   booktitle = ICML,
   year      = {2008}
 }
+
 
 @inproceedings{Wald2019,
   author    = {Wald, Johanna and Avetisyan, Armen and Navab, Nassir and Tombari, Federico and Nie{\ss}ner, Matthias},
@@ -3655,7 +3665,6 @@
   number  = {2}
 }
 
-
 @article{Wang2015,
   author  = {Wang, Peng-Shuai and Fu, Xiao-Ming and Liu, Yang and Tong, Xin and Liu, Shi-Lin and Guo, Baining},
   title   = {Rolling guidance normal filter for geometric processing},
@@ -3673,6 +3682,7 @@
   year    = {2016},
   volume  = {174}
 }
+
 
 @article{Wang2016a,
   author  = {Wang, Peng-Shuai and Liu, Yang and Tong, Xin},
@@ -3834,6 +3844,13 @@
   volume  = {8},
   number  = {3},
   year    = {2022}
+}
+
+@inproceedings{Wang2022b,
+  title     = {{CAGroup3D}: Class-aware grouping for {3D} object detection on point clouds},
+  author    = {Haiyang Wang and Lihe Ding and Shaocong Dong and Shaoshuai Shi and Aoxue Li and Jianan Li and Zhenguo Li and Liwei Wang},
+  booktitle = NeurIPS,
+  year      = {2022}
 }
 
 @misc{Warehouse2018,
