--- a/reference.bib
+++ b/reference.bib
@@ -5,7 +5,7 @@
 @String { CAD      = {Computer Aided Design} }
 @String { CAGD     = {Comput. Aided Geom. Des.} }
 @String { CGF      = {Comput. Graph. Forum} }
-@String { CVM      = {Computational Visual Media} }
+@String { CVM      = {Comput. Vis. Media} }
 @String { CVPR     = {CVPR} }
 @String { ECCV     = {ECCV} }
 @String { EG       = {Comput. Graph. Forum (EG)} }
@@ -1292,7 +1292,7 @@
 @article{Guo2021,
   title   = {{PCT}: Point cloud transformer},
   author  = {Guo, Meng-Hao and Cai, Jun-Xiong and Liu, Zheng-Ning and Mu, Tai-Jiang and Martin, Ralph R and Hu, Shi-Min},
-  journal = {Computational Visual Media},
+  journal = CVM,
   volume  = {7},
   number  = {2},
   year    = {2021}
