--- a/reference.bib
+++ b/reference.bib
@@ -1532,7 +1532,7 @@
 }
 
 @inproceedings{Hu2020,
-  title     = {{JSENet}: Joint semantic segmentation and edge detection network for 3d point clouds},
+  title     = {{JSENet}: Joint Semantic Segmentation and Edge Detection Network for {3D} Point Clouds},
   author    = {Hu, Zeyu and Zhen, Mingmin and Bai, Xuyang and Fu, Hongbo and Tai, Chiew-lan},
   booktitle = ECCV,
   year      = {2020}
