--- a/reference.bib
+++ b/reference.bib
@@ -3399,7 +3399,7 @@
 
 
 @article{Shu2016,
-  author  = {Zhenyu Shu and Chengwu Qi and Shiqing Xin and Chao Hu and Li Wang and Yu Zhang and Ligang Liu},
+  author  = {Zhenyu Shu and Chengwu Qi and Shi-Qing Xin and Chao Hu and Li Wang and Yu Zhang and Ligang Liu},
   title   = {Unsupervised {3D} shape segmentation and co-segmentation via deep learning},
   journal = CAGD,
   year    = {2016},
@@ -4306,7 +4306,7 @@
   journal = CAD,
   volume  = {102},
   year    = {2018},
-  author  = {Shiqing Xin and Wenping Wang and Ying He and Yuanfeng Zhou and Shuangmin Chen and Changhe Tu and Zhenyu Shu}
+  author  = {Shi-Qing Xin and Wenping Wang and Ying He and Yuanfeng Zhou and Shuangmin Chen and Changhe Tu and Zhenyu Shu}
 }
 
 @incollection{Xu2009,
