--- a/reference.bib
+++ b/reference.bib
@@ -2830,8 +2830,8 @@
   year    = {2009}
 }
 
-@inproceedings{P.2004,
-  author    = {BHAT, P. and INGRAM, S. AND TURK, G.},
+@inproceedings{Pravin2004,
+  author    = {Bhat, Pravin and Ingram, Stephen and Turk, Greg},
   title     = {Geometric texture synthesis by example},
   booktitle = SGPOLD,
   year      = {2004}
